# argon-one-v2-services

./: .gitignore  Cargo.toml  LICENSE.md  README.md  argon_fan.service  argon_services_config.yaml  argon_shutdown_button.service  deploy.sh  install.sh  uninstall.sh
argon_fan/: Cargo.toml
argon_fan/src/: main.rs  mapper.rs
argon_shutdown/: Cargo.toml
argon_shutdown/src/: main.rs
argon_shutdown_button/: Cargo.toml
argon_shutdown_button/src/: main.rs
shared_utils/: Cargo.toml
shared_utils/src/: initialize_device.rs  lib.rs  load_yaml.rs  mapper.rs
src/: main.rs
