[package]
name = "argon-one-v2-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"

[target.aarch64-unknown-linux-gnu]
linker = "/usr/bin/aarch64-linux-gnu-gcc"

[build]
rustflags = ["-D", "warnings"]

[profile.release]
lto = true
panic = 'abort'
strip = "symbols"