[workspace]
members = [
    "argon_shutdown",
    "argon_shutdown_button",
    "argon_fan",
    "shared_utils"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
shared_utils = { path = "shared_utils" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

