[workspace]
members = [
    "argon_shutdown",
    "argon_shutdown_button",
    "argon_fan",
    "shared_utils"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license-file = "LICENSE.md"

[workspace.dependencies]
shared_utils = { path = "shared_utils" }

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "fat"
